docs: load sideloaded plugin via normal client in --developer-mode; more --add-opens for gradle run
Sideloaded plugins only load in developer mode. The normal RuneLite client runs fine (launcher passes
the right JVM args) but ignores sideloaded-plugins/ unless launched with --developer-mode. README now
documents launching the normal client in dev mode (keeps correct JVM args, no module crash). The
gradle run task gains java.base/java.lang.reflect + java.net + java.io opens so the from-source dev
launcher also gets past RuneLite's reflection startup on JDK 9+.